Finished the last bit of the final report and renamed it.

--- a/telco_classification_final_report.ipynb
+++ b/telco_classification_final_report.ipynb
@@ -57,7 +57,7 @@
    "id": "47f81ca0",
    "metadata": {},
    "source": [
-    "- ReadMe can be found here (add link), containing a data dictionary, project goals, and some initial hypotheses. about drivers of customer churn. \n",
+    "- ReadMe can be found [here](https://github.com/greg-maggard/telco_classification_project/blob/main/README.md), containing a data dictionary, project goals, and some initial hypotheses about drivers of customer churn. \n",
     "- Acquire data via pre-written scripts to pull from Codeup's database.\n",
     "- Prepare data via pre-written scripts for EDA and modeling.\n",
     "- Establish at least two hypotheses and their corresponding null hypotheses, run tests to determine whether we can reject those nulls. Document findings for reference.\n",
