Condensed some more code into functions within my module. Refined final report.

--- a/telco_classification_final_report.ipynb
+++ b/telco_classification_final_report.ipynb
@@ -39,7 +39,7 @@
     "from acquire import get_telco_data\n",
     "from prepare import clean_telco_data, prep_telco_data, telco_sample_splitter\n",
     "from env import get_db_url\n",
-    "from stats_toolkit import significance_test"
+    "from stats_toolkit import significance_test, optimal_rf_finder, rf_performance_grapher"
    ]
   },
   {
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b6fecf59",
+   "id": "0014f65e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "f55d069e",
    "metadata": {},
    "outputs": [
@@ -695,7 +695,7 @@
     "### Exploration, Recapped:\n",
     "- 27% of customers churned in the last month\n",
     "- Customers with fiber optic internet or who pay with e-checks are more likely to churn. \n",
-    "    - Future efforts to understand why fiber optic customer churn may prove worthwhile.\n",
+    "    - Future efforts to understand why fiber optic customers churn may prove worthwhile.\n",
     "    - Encouraging customers to switch from electronic checks to other payment methods may help reduce churn."
    ]
   },
@@ -772,7 +772,7 @@
    "id": "c0adc32b",
    "metadata": {},
    "source": [
-    "### In-Sample Accuracy is ~ 78.3%"
+    "### In-Sample Accuracy is ~ 78%"
    ]
   },
   {
@@ -803,7 +803,7 @@
    "id": "5f231ff3",
    "metadata": {},
    "source": [
-    "### Out-of-Sample Accuracy is ~ 80.5%"
+    "### Out-of-Sample Accuracy is ~ 80%"
    ]
   },
   {
@@ -867,7 +867,7 @@
    "id": "6bcec8ed",
    "metadata": {},
    "source": [
-    "### In-Sample Accuracy is ~ 81.4%"
+    "### In-Sample Accuracy is ~ 81%"
    ]
   },
   {
@@ -898,7 +898,7 @@
    "id": "aad8f348",
    "metadata": {},
    "source": [
-    "### Out-of-Sample Accuracy is ~ 81.5%"
+    "### Out-of-Sample Accuracy is ~ 82%"
    ]
   },
   {
@@ -961,7 +961,7 @@
    "id": "68f15f90",
    "metadata": {},
    "source": [
-    "### In-Sample Accuracy is ~ 80.1%"
+    "### In-Sample Accuracy is ~ 80%"
    ]
   },
   {
@@ -992,7 +992,7 @@
    "id": "671468d1",
    "metadata": {},
    "source": [
-    "### Out-of-Sample Accuracy is ~ 80.4%"
+    "### Out-of-Sample Accuracy is ~ 80%"
    ]
   },
   {
@@ -1032,7 +1032,7 @@
    "id": "70be3783",
    "metadata": {},
    "source": [
-    "## Test Accuracy is ~ 82.0%"
+    "## Test Accuracy is ~ 82%"
    ]
   },
   {
@@ -1111,7 +1111,242 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c243af57",
+   "id": "fdc005b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min_samples_per_leaf</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>train_accuracy</th>\n",
+       "      <th>validate_accuracy</th>\n",
+       "      <th>difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.901333</td>\n",
+       "      <td>0.797333</td>\n",
+       "      <td>0.104000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.864222</td>\n",
+       "      <td>0.805333</td>\n",
+       "      <td>0.058889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.848667</td>\n",
+       "      <td>0.806222</td>\n",
+       "      <td>0.042444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.838667</td>\n",
+       "      <td>0.810667</td>\n",
+       "      <td>0.028000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.834889</td>\n",
+       "      <td>0.808000</td>\n",
+       "      <td>0.026889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.829333</td>\n",
+       "      <td>0.808889</td>\n",
+       "      <td>0.020444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.825111</td>\n",
+       "      <td>0.812444</td>\n",
+       "      <td>0.012667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>9</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.821333</td>\n",
+       "      <td>0.813333</td>\n",
+       "      <td>0.008000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.813556</td>\n",
+       "      <td>0.815111</td>\n",
+       "      <td>-0.001556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.811778</td>\n",
+       "      <td>0.812444</td>\n",
+       "      <td>-0.000667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>12</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.807556</td>\n",
+       "      <td>0.812444</td>\n",
+       "      <td>-0.004889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>13</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.805556</td>\n",
+       "      <td>0.812444</td>\n",
+       "      <td>-0.006889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.803333</td>\n",
+       "      <td>0.808000</td>\n",
+       "      <td>-0.004667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.796889</td>\n",
+       "      <td>0.803556</td>\n",
+       "      <td>-0.006667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.784667</td>\n",
+       "      <td>0.792000</td>\n",
+       "      <td>-0.007333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>17</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.772889</td>\n",
+       "      <td>0.774222</td>\n",
+       "      <td>-0.001333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.734222</td>\n",
+       "      <td>0.734222</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.734222</td>\n",
+       "      <td>0.734222</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    min_samples_per_leaf  max_depth  train_accuracy  validate_accuracy  \\\n",
+       "0                      2         18        0.901333           0.797333   \n",
+       "1                      3         17        0.864222           0.805333   \n",
+       "2                      4         16        0.848667           0.806222   \n",
+       "3                      5         15        0.838667           0.810667   \n",
+       "4                      6         14        0.834889           0.808000   \n",
+       "5                      7         13        0.829333           0.808889   \n",
+       "6                      8         12        0.825111           0.812444   \n",
+       "7                      9         11        0.821333           0.813333   \n",
+       "8                     10         10        0.813556           0.815111   \n",
+       "9                     11          9        0.811778           0.812444   \n",
+       "10                    12          8        0.807556           0.812444   \n",
+       "11                    13          7        0.805556           0.812444   \n",
+       "12                    14          6        0.803333           0.808000   \n",
+       "13                    15          5        0.796889           0.803556   \n",
+       "14                    16          4        0.784667           0.792000   \n",
+       "15                    17          3        0.772889           0.774222   \n",
+       "16                    18          2        0.734222           0.734222   \n",
+       "17                    19          1        0.734222           0.734222   \n",
+       "\n",
+       "    difference  \n",
+       "0     0.104000  \n",
+       "1     0.058889  \n",
+       "2     0.042444  \n",
+       "3     0.028000  \n",
+       "4     0.026889  \n",
+       "5     0.020444  \n",
+       "6     0.012667  \n",
+       "7     0.008000  \n",
+       "8    -0.001556  \n",
+       "9    -0.000667  \n",
+       "10   -0.004889  \n",
+       "11   -0.006889  \n",
+       "12   -0.004667  \n",
+       "13   -0.006667  \n",
+       "14   -0.007333  \n",
+       "15   -0.001333  \n",
+       "16    0.000000  \n",
+       "17    0.000000  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optimal_rf_finder(X_train, y_train, X_validate, y_validate)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "a9f38b7f",
    "metadata": {},
    "outputs": [
     {
@@ -1128,12 +1363,7 @@
     }
    ],
    "source": [
-    "#Creating a graph to chart the metrics for each of the above hyperparameter combinations:\n",
-    "df.set_index('max_depth')[['train_accuracy', 'validate_accuracy','difference']].plot(figsize = (16,9))\n",
-    "plt.ylabel('Accuracy')\n",
-    "plt.xticks(np.arange(0,21,1))\n",
-    "plt.grid()\n",
-    "plt.title('Model Performance as Related to Hyperparameter Selection')\n",
+    "rf_performance_grapher(df)\n",
     "\n",
     "#Adding a red line to show the most optimal hyperparameter combination for this Random Forest Model:\n",
     "plt.vlines(x = 10, ymin = 0, ymax = 1, colors = 'r', linestyles = 'solid');"
@@ -1201,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "5bd66c5c",
    "metadata": {},
    "outputs": [],
