Commented some of my code, and removed unnecessary code blocks.

--- a/telco_classification_final_report.ipynb
+++ b/telco_classification_final_report.ipynb
@@ -346,6 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Using telco_sample_splitter script to generate X and y subsets of train, validate, and test:\n",
     "X_train, y_train, X_validate, y_validate, X_test, y_test = telco_sample_splitter(train, validate, test)"
    ]
   },
@@ -402,7 +403,9 @@
     }
    ],
    "source": [
+    "#Adding title:\n",
     "plt.title(\"How Many Customers Churned?\")\n",
+    "#drawing histogram\n",
     "sns.histplot(train, x = 'churn', legend = True);"
    ]
   },
@@ -463,9 +466,12 @@
     }
    ],
    "source": [
+    "#Defining size of chart window for visibility:\n",
     "f = plt.figure(figsize=(12,8))\n",
+    "#Adding a subplot such that my churn values are stacked\n",
     "ax = f.add_subplot(1,1,1)\n",
     "\n",
+    "#Drawing the histogram, stacking on 'churn' variable, and huing by 'churn' variable. Including legend and title:\n",
     "sns.histplot(data= train, ax=ax, stat=\"count\", multiple=\"stack\",\n",
     "             x=\"payment_type\", kde=False, hue=\"churn\",\n",
     "             element=\"bars\", legend=True).set(Title = \"Proportion of Churned Customers by Payment Type\");"
@@ -496,14 +502,18 @@
     }
    ],
    "source": [
+    "#Creating a dataframe from 'payment_type' and 'churn' columns within train subsample\n",
     "e_check_hypothesis = train[['payment_type', 'churn']]\n",
+    "#adding a column with boolean values indicating whether the customer pays with electronic check\n",
     "e_check_hypothesis['e_check_boolean'] = (train['payment_type'] == 'Electronic check')\n",
-    "#e_check_hypothesis\n",
     "\n",
+    "#Creating a contingency table from a crosstabulation of churn and whether the customer pays with e-check\n",
     "e_check_contingency_table = pd.crosstab(e_check_hypothesis.churn, e_check_hypothesis.e_check_boolean)\n",
     "\n",
+    "#running chi-squared analysis on churn and payment with e-checks\n",
     "chi2, p, degf, expected = stats.chi2_contingency(e_check_contingency_table)\n",
     "\n",
+    "#using significance_test script from my stats_toolkit module to take p-value and return string indicating whether we can reject the null:\n",
     "significance_test(p)"
    ]
   },
@@ -547,9 +557,12 @@
     }
    ],
    "source": [
+    "#Defining size of chart window for visibility:\n",
     "f = plt.figure(figsize=(7,5))\n",
+    "#Adding a subplot such that my churn values are stacked\n",
     "ax = f.add_subplot(1,1,1)\n",
     "\n",
+    "#Drawing the histogram, stacking on 'churn' variable, and huing by 'churn' variable. Including legend and title:\n",
     "sns.histplot(data= train, ax=ax, stat=\"count\", multiple=\"stack\",\n",
     "             x=\"multiple_lines\", kde=False, hue=\"churn\",\n",
     "             element=\"bars\", legend=True).set(Title = \"Proportion of Customer Churn by Multiple Line Status\");"
@@ -580,14 +593,18 @@
     }
    ],
    "source": [
+    "#Creating a dataframe from 'multiple_lines' and 'churn' columns within train subsample:\n",
     "multiple_line_hypothesis = train[['multiple_lines', 'churn']]\n",
+    "#adding a column with boolean values indicating whether the customer has multiple lines:\n",
     "multiple_line_hypothesis['multiple_lines_boolean'] = (train['multiple_lines'] == 'Yes')\n",
-    "#multiple_line_hypothesis\n",
     "\n",
+    "#Creating a contingency table from a crosstabulation of churn and whether the customer has multiple lines:\n",
     "multi_line_contingency_table = pd.crosstab(multiple_line_hypothesis.churn, multiple_line_hypothesis.multiple_lines_boolean)\n",
     "\n",
+    "#running chi-squared analysis on churn and whether customer has multiple lines:\n",
     "chi2, p, degf, expected = stats.chi2_contingency(multi_line_contingency_table)\n",
     "\n",
+    "#using significance_test script from my stats_toolkit module to take p-value and return string indicating whether we can reject the null:\n",
     "significance_test(p)"
    ]
   },
@@ -631,9 +648,12 @@
     }
    ],
    "source": [
+    "#Defining size of chart window for visibility:\n",
     "f = plt.figure(figsize=(7,5))\n",
+    "#Adding a subplot such that my churn values are stacked\n",
     "ax = f.add_subplot(1,1,1)\n",
     "\n",
+    "#Drawing the histogram, stacking on 'churn' variable, and huing by 'churn' variable. Including legend and title:\n",
     "sns.histplot(data= train, ax=ax, stat=\"count\", multiple=\"stack\",\n",
     "             x=\"internet_service_type\", kde=False, hue=\"churn\",\n",
     "             element=\"bars\", legend=True).set(Title = \"Proportion of Churned Customers by Internet Service Type\");"
@@ -664,14 +684,18 @@
     }
    ],
    "source": [
+    "#Creating a dataframe from 'internet_service_type' and 'churn' columns within train subsample:\n",
     "fiber_optic_hypothesis = train[['internet_service_type', 'churn']]\n",
+    "#adding a column with boolean values indicating whether the customer has fiber optic internet:\n",
     "fiber_optic_hypothesis['fiber_optic'] = (train['internet_service_type'] == 'Fiber optic')\n",
-    "#fiber_optic_hypothesis\n",
     "\n",
+    "#Creating a contingency table from a crosstabulation of churn and whether the customer has fiber optic internet:\n",
     "contingency_table = pd.crosstab(fiber_optic_hypothesis.churn, fiber_optic_hypothesis.fiber_optic)\n",
     "\n",
+    "#running chi-squared analysis on churn and whether customer has fiber optic internet:\n",
     "chi2, p, degf, expected = stats.chi2_contingency(contingency_table)\n",
     "\n",
+    "#using significance_test script from my stats_toolkit module to take p-value and return string indicating whether we can reject the null:\n",
     "significance_test(p)"
    ]
   },
@@ -1068,49 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "8cfd4dd5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Writing a loop to visualize best model's performance in relation to different hyperparameters:\n",
-    "metrics = []\n",
-    "max_depth = 20\n",
-    "\n",
-    "for i in range(2, max_depth):\n",
-    "    # Make the model (note that as n_samples goes up, max_depth will go down)\n",
-    "    depth = max_depth - i\n",
-    "    n_samples = i\n",
-    "    forest = RandomForestClassifier(max_depth=depth, min_samples_leaf=n_samples, random_state=123)\n",
-    "\n",
-    "    # Fit the model on the training set to determine accuracy on known data\n",
-    "    forest = forest.fit(X_train, y_train)\n",
-    "\n",
-    "    # Evaluate model's performance on training set:\n",
-    "    in_sample_accuracy = forest.score(X_train, y_train)\n",
-    "    \n",
-    "    #Evaluate how the model performs on the validate set to compare with the training set (helps check for overfitting):\n",
-    "    out_of_sample_accuracy = forest.score(X_validate, y_validate)\n",
-    "\n",
-    "    #creates an entry into a dictionary containing metrics for each hyperparameter combination:\n",
-    "    output = {\n",
-    "        \"min_samples_per_leaf\": n_samples,\n",
-    "        \"max_depth\": depth,\n",
-    "        \"train_accuracy\": in_sample_accuracy,\n",
-    "        \"validate_accuracy\": out_of_sample_accuracy\n",
-    "    }\n",
-    "    \n",
-    "    metrics.append(output)\n",
-    "\n",
-    "# converting output dictionary to dataframe:    \n",
-    "df = pd.DataFrame(metrics)\n",
-    "#Adding a 'difference' column that contains values for the difference between the model's accuracy on the train and validate sets:\n",
-    "df[\"difference\"] = df.train_accuracy - df.validate_accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "fdc005b1",
    "metadata": {},
    "outputs": [
@@ -1333,19 +1315,20 @@
        "17    0.000000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Using my optimal_rf_finder model to run a series of random forest models with differing hyperparameters for comparison:\n",
     "optimal_rf_finder(X_train, y_train, X_validate, y_validate)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "a9f38b7f",
    "metadata": {},
    "outputs": [
